kubernetes/jsdyb-k8s-001/apps/monitor/kiali/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:istio"
  labels:
    app.kubernetes.io/name: &app kiali
    app.kubernetes.io/instance: *app
    app.kubernetes.io/part-of: *app
  name: *app
  namespace: monitor
spec:
  hostnames:
    - kiali.${EXTERNAL_DOMAIN}
  parentRefs:
    - kind: Gateway
      name: private-gateway
      namespace: gateway
  rules:
    - backendRefs:
        - kind: Service
          name: *app
          port: 20001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
